--- a/src/App.css
+++ b/src/App.css
@@ -85,7 +85,7 @@ max-width: 100%;
 
 .navbar-middle .menu-links a{
     font-size: 14px;
-    line-height: 18px;
+    line-height: 12px;
     font-weight: 400;
     letter-spacing: 0.3;
     text-transform: uppercase;
@@ -113,7 +113,14 @@ max-width: 100%;
   font-size: 20px;
   border: none;
 }
-
+.logo {
+  margin-right: 40px;
+}
+.logo-heading {
+  color:black;
+  padding-top:4px;
+  margin-right: 20px;
+}
 .cart-span-one{
   position: relative;
 }
@@ -182,17 +189,17 @@ max-width: 100%;
   background-position: top 25% right 0;
   background-size: cover;
   width: 100%;
-  padding: 0 80px;
+  padding: 0 100px;
   align-items: flex-start;
   justify-content: center;
   display: flex;
   flex-direction: column;
 }
 .banner .back-details h1{
-  font-size: 52px;
+  font-size: 22px;
 }
 .banner .back-details h2{
-  font-size: 32px;
+  font-size: 22px;
 }
 
 .banner .back-details p{
@@ -207,7 +214,9 @@ max-width: 100%;
     align-items: center;
     text-align: center;
   }
-
+  .logo {
+    margin-right: 4px;
+  }
   .banner .back-details h1 {
     font-size: 36px;
   }
@@ -220,7 +229,7 @@ max-width: 100%;
 #button-link {
   border-radius: 10px;
   font-size: 18px;
-  padding: 12px 24px;
+  padding: 6px 18px;
   background-color: var(--primary1);
   color: white;
   border: 1px solid transparent;
@@ -259,8 +268,6 @@ max-width: 100%;
   background: var(--primary2);
   color: white;
 }
-
-.text-center
 
 .featured-products button:hover{
 background: transparent;
